--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "npx prettier --write ."
+    "format": "npx prettier --write .",
+    "lint": "eslint --fix ."
   },
   "dependencies": {
     "next": "14.1.0",
