--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "format": "npx prettier --write .",
+    "fix": "npx prettier --write .",
     "lint": "eslint --fix ."
   },
   "dependencies": {
