--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "firebase": "^10.8.1",
     "next": "14.1.0",
+    "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-player": "^2.14.1"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/youtube": "^0.0.50",
