--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --fix ."
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.25.0",
     "firebase": "^10.8.1",
     "next": "14.1.0",
     "nprogress": "^0.2.0",
