--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.25.0",
     "firebase": "^10.8.1",
+    "firebase-admin": "^12.1.0",
     "next": "14.1.0",
     "nprogress": "^0.2.0",
     "react": "^18",
