--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.8.1",
     "firebase-admin": "^12.1.0",
     "next": "14.1.0",
+    "nookies": "^2.5.2",
     "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
