--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.25.0",
     "firebase": "^10.8.1",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "nookies": "^2.5.2",
     "nprogress": "^0.2.0",
     "react": "^18",
