--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-player": "^2.14.1"
+    "react-player": "^2.14.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
