--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "fix": "npx prettier --write .",
-    "lint": "eslint --fix ."
+    "lint": "eslint --fix .",
+    "test": "jest"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.25.0",
